# pulse

./: LICENSE  README.md  pyproject.toml  run.sh  test.sh
pulse/: __main__.py  app.py  styles.tcss
pulse/utils/: stats.py  theme.py
pulse/widgets/: gauge.py
tests/: test_gauge.py  test_stats.py  test_theme.py
