[project]
name = "pulse"
version = "0.1.0"
description = "Pulse — system monitor dashboard"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80",
    "psutil>=5.9",
    "pyfiglet>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pulse = "pulse.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pulse"]

[tool.hatch.build]
include = [
    "pulse/**/*.py",
    "pulse/styles.tcss",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
